# ddspmm-aplication

./: .gitignore  Makefile  README.md  compose.yaml  package-lock.json
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  test.py
backend/api/: app.py  main.py
backend/api/commands/: create_openapi_schema.py
backend/api/config/: __init__.py  preprocess.config.yaml  pretrain.config.yaml  train.config.yaml
backend/api/config/model/: loss_config.py  model_config.py  preprocess_config.py  train_config.py
backend/api/controllers/: common.py
backend/api/controllers/backend_api/: ddsp.py  router.py
backend/api/controllers/backend_api/openapi/: models.py  openapi.yml
backend/api/libs/: error_handlers.py  exceptions.py  logging.py  midi.py  wav.py
backend/api/models/ddsp/: __init__.py  core.py  ddsp.py  load_model.py  model.py
backend/api/models/ddsp/loss/: __init__.py  fd_regularization_loss.py  loss.py  mel_loss.py  td_regularization_loss.py
backend/api/models/ddsp/statistics/: fd_mean.json  fd_std.json  loudness.json  td_delta_delta_var.json  td_delta_var.json
backend/api/models/midi_aligner/: __init__.py  midi_aligner.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/hooks/: useDisclosure.tsx
frontend/src/libs/: mutator.ts
frontend/src/modules/: index.tsx
frontend/src/types/: learnData.tsx  (+1 more)
nginx/: Dockerfile
nginx/conf.d/: nginx.conf
(+18 files in other folders)
